--- a/src/components/UIElements/Modal.css
+++ b/src/components/UIElements/Modal.css
@@ -13,6 +13,7 @@
   background: #2c2c2c;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.7);
   border-radius: 8px;
+  color: white;
 }
 
 .modal__header {
@@ -36,6 +37,24 @@
   justify-content: center;
   gap: 0.5rem;
   padding: 1rem 0.5rem;
+}
+
+/* wrong color in ios fix */
+.modal__footer button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.3em 1em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+
+  display: flex;
+  align-items: center;   
+  justify-content: center; 
+  color: white;
 }
 
 
