--- a/src/index.css
+++ b/src/index.css
@@ -105,7 +105,6 @@ h1 {
 }
 
 button {
-  all: unset;  
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.3em 1em;
@@ -119,10 +118,9 @@ button {
   display: flex;
   align-items: center;   
   justify-content: center; 
-  color: white;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #f7f8ff;
 }
 button:focus,
 button:focus-visible {
