--- a/src/pages/Auth.css
+++ b/src/pages/Auth.css
@@ -43,3 +43,20 @@
 .auth-text-button:focus-visible {
   outline: none
 }
+
+.auth-btn {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.3em 1em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+
+  display: flex;
+  align-items: center;   
+  justify-content: center; 
+  color: white;
+}
